--- a/app/src/main/res/layout/fragment_shop_details.xml
+++ b/app/src/main/res/layout/fragment_shop_details.xml
@@ -155,116 +155,123 @@
             android:text="@string/services" />
 
         <HorizontalScrollView
-            android:id="@+id/servicesScrollView"
+            android:id="@+id/servicesHorizontalScrollView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             grid:layout_columnWeight="2"
             grid:layout_gravity="fill_horizontal">
 
-            <LinearLayout
+            <ScrollView
+                android:id="@+id/servicesVerticalScrollView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/serviceClearingSettlementImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_clearing_settlement"
-                    android:src="@drawable/service_clearing_settlement" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/serviceCosmeticsImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_cosmetics"
-                    android:src="@drawable/service_cosmetics" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/serviceClearingSettlementImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_clearing_settlement"
+                        android:src="@drawable/service_clearing_settlement" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/servicePlaygroundImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_playground"
-                    android:src="@drawable/service_playground" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/serviceCosmeticsImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_cosmetics"
+                        android:src="@drawable/service_cosmetics" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/serviceFishIslandImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_fish_island"
-                    android:src="@drawable/service_fish_island" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/servicePlaygroundImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_playground"
+                        android:src="@drawable/service_playground" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/serviceBakeryImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_bakery"
-                    android:src="@drawable/service_bakery" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/serviceFishIslandImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_fish_island"
+                        android:src="@drawable/service_fish_island" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/serviceCookeryImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_cookery"
-                    android:src="@drawable/service_cookery" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/serviceBakeryImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_bakery"
+                        android:src="@drawable/service_bakery" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/serviceTaxiOrderingImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_taxi_ordering"
-                    android:src="@drawable/service_taxi_ordering" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/serviceCookeryImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_cookery"
+                        android:src="@drawable/service_cookery" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/servicePharmacyImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_pharmacy"
-                    android:src="@drawable/service_pharmacy" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/serviceTaxiOrderingImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_taxi_ordering"
+                        android:src="@drawable/service_taxi_ordering" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/serviceOrderingFoodImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_ordering_food"
-                    android:src="@drawable/service_ordering_food" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/servicePharmacyImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_pharmacy"
+                        android:src="@drawable/service_pharmacy" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/serviceDegustationImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_degustation"
-                    android:src="@drawable/service_degustation" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/serviceOrderingFoodImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_ordering_food"
+                        android:src="@drawable/service_ordering_food" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/serviceCafeImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_cafe"
-                    android:src="@drawable/service_cafe" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/serviceDegustationImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_degustation"
+                        android:src="@drawable/service_degustation" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/serviceGiftCardsImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_gift_cards"
-                    android:src="@drawable/service_gift_cards" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/serviceCafeImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_cafe"
+                        android:src="@drawable/service_cafe" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/serviceParkingImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_parking"
-                    android:src="@drawable/service_parking" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/serviceGiftCardsImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_gift_cards"
+                        android:src="@drawable/service_gift_cards" />
 
-                <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
-                    android:id="@+id/servicePointOfIssuingOrdersImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/service_point_of_issuing_orders"
-                    android:src="@drawable/service_point_of_issuing_orders" />
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/serviceParkingImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_parking"
+                        android:src="@drawable/service_parking" />
 
-            </LinearLayout>
+                    <ru.okmarket.okgoods.widgets.ImageViewWithTooltip
+                        android:id="@+id/servicePointOfIssuingOrdersImageView"
+                        android:layout_width="@dimen/service_image_size"
+                        android:layout_height="@dimen/service_image_size"
+                        android:contentDescription="@string/service_point_of_issuing_orders"
+                        android:src="@drawable/service_point_of_issuing_orders" />
+
+                </LinearLayout>
+
+            </ScrollView>
 
         </HorizontalScrollView>
 
@@ -278,19 +285,26 @@
             android:text="@string/photos" />
 
         <HorizontalScrollView
-            android:id="@+id/photosScrollView"
+            android:id="@+id/photosHorizontalScrollView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             grid:layout_columnWeight="2"
             grid:layout_gravity="fill_horizontal">
 
-            <LinearLayout
-                android:id="@+id/photosLinearLayout"
+            <ScrollView
+                android:id="@+id/photosVerticalScrollView"
                 android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
-            </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/photosLinearLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/shop_photo_size"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+
+            </ScrollView>
 
         </HorizontalScrollView>
 
