--- a/app/src/main/res/layout/fragment_shop_map.xml
+++ b/app/src/main/res/layout/fragment_shop_map.xml
@@ -23,8 +23,8 @@
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginLeft="@dimen/common_margin"
+                android:layout_marginStart="@dimen/common_margin"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold"
                 android:textColor="@color/textColorPrimary"
@@ -37,8 +37,8 @@
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="@dimen/common_margin"
+                android:layout_marginRight="@dimen/common_margin"
                 android:layout_toRightOf="@id/shopTextView"
                 android:layout_toEndOf="@id/shopTextView"
                 android:textAppearance="?android:attr/textAppearanceMedium"
