--- a/app/src/main/res/layout-land/fragment_shop_details.xml
+++ b/app/src/main/res/layout-land/fragment_shop_details.xml
@@ -24,8 +24,8 @@
         android:layout_above="@+id/controlsLinearLayout"
         android:layout_toLeftOf="@+id/servicesLayout"
         android:layout_toStartOf="@+id/servicesLayout"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginRight="@dimen/common_margin"
+        android:layout_marginEnd="@dimen/common_margin"
         grid:alignmentMode="alignBounds"
         grid:columnCount="2"
         grid:useDefaultMargins="true">
@@ -148,13 +148,14 @@
         android:layout_above="@+id/controlsLinearLayout"
         android:layout_toLeftOf="@+id/photosLayout"
         android:layout_toStartOf="@+id/photosLayout"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="@dimen/common_margin"
+        android:layout_marginRight="@dimen/common_margin"
+        android:layout_marginEnd="@dimen/common_margin"
+        android:layout_marginBottom="@dimen/common_margin"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/servicesTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
@@ -165,7 +166,7 @@
             android:id="@+id/servicesHorizontalScrollView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="@dimen/common_margin">
 
             <ScrollView
                 android:id="@+id/servicesVerticalScrollView"
@@ -292,13 +293,14 @@
         android:layout_alignWithParentIfMissing="true"
         android:layout_below="@+id/nameTextView"
         android:layout_above="@+id/controlsLinearLayout"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="@dimen/common_margin"
+        android:layout_marginRight="@dimen/common_margin"
+        android:layout_marginEnd="@dimen/common_margin"
+        android:layout_marginBottom="@dimen/common_margin"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/photosTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
@@ -309,7 +311,7 @@
             android:id="@+id/photosHorizontalScrollView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="@dimen/common_margin">
 
             <ScrollView
                 android:id="@+id/photosVerticalScrollView"
