--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="activity_horizontal_margin">0dp</dimen>
     <dimen name="activity_vertical_margin">0dp</dimen>
+    <dimen name="common_margin">8dp</dimen>
     <dimen name="toolbar_size">48dp</dimen>
     <dimen name="shop_filter_service_button_size">48dp</dimen>
     <dimen name="service_image_size">48dp</dimen>
