--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -5,9 +5,9 @@
     android:orientation="vertical"
     tools:context="ru.okmarket.okgoods.fragments.PhotoFragment">
 
-    <TextView
+    <uk.co.senab.photoview.PhotoView
+        android:id="@+id/photoView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/app_name" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
