--- a/app/src/main/res/layout/fragment_shop_details.xml
+++ b/app/src/main/res/layout/fragment_shop_details.xml
@@ -289,14 +289,14 @@
         <HorizontalScrollView
             android:id="@+id/photosHorizontalScrollView"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/shop_photo_size"
             grid:layout_columnWeight="2"
             grid:layout_gravity="fill_horizontal">
 
             <ScrollView
                 android:id="@+id/photosVerticalScrollView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="@dimen/shop_photo_size">
 
                 <LinearLayout
                     android:id="@+id/photosLinearLayout"
