--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     tools:context="ru.okmarket.okgoods.fragments.PhotoFragment">
 
-    <uk.co.senab.photoview.PhotoView
+    <ru.okmarket.okgoods.widgets.CachedPhotoView
         android:id="@+id/photoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
