--- a/app/src/main/res/layout/fragment_shop_map.xml
+++ b/app/src/main/res/layout/fragment_shop_map.xml
@@ -19,13 +19,13 @@
             <TextView
                 android:id="@+id/shopTextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
+                android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="@dimen/common_margin"
                 android:layout_marginStart="@dimen/common_margin"
                 android:textAppearance="?android:attr/textAppearanceMedium"
+                android:gravity="center"
                 android:textStyle="bold"
                 android:textColor="@color/textColorPrimary"
                 android:text="@string/shop" />
@@ -33,8 +33,7 @@
             <TextView
                 android:id="@+id/selectShopTextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
+                android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginLeft="@dimen/common_margin"
