--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,7 +8,7 @@
         android:icon="@drawable/add"
         android:title="@string/add_good"
         android:orderInCategory="100"
-        app:showAsAction="never"/>
+        app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/menu_delete_goods"
         android:icon="@drawable/delete"
@@ -16,34 +16,40 @@
         android:orderInCategory="200"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/menu_start"
+        android:icon="@drawable/start"
+        android:title="@string/start"
+        android:orderInCategory="300"
+        app:showAsAction="ifRoom"/>
+
     <item android:id="@+id/menu_select_shop"
         android:icon="@drawable/select_shop"
         android:title="@string/select_shop"
-        android:orderInCategory="300"
+        android:orderInCategory="400"
         app:showAsAction="never"/>
 
     <item android:id="@+id/menu_history"
         android:icon="@drawable/history"
         android:title="@string/history"
-        android:orderInCategory="400"
+        android:orderInCategory="500"
         app:showAsAction="never"/>
 
     <item android:id="@+id/menu_update_db"
         android:icon="@drawable/update_db"
         android:title="@string/update_db"
-        android:orderInCategory="500"
+        android:orderInCategory="600"
         app:showAsAction="never"/>
 
     <item android:id="@+id/menu_settings"
         android:icon="@drawable/settings"
         android:title="@string/settings"
-        android:orderInCategory="600"
+        android:orderInCategory="700"
         app:showAsAction="never"/>
 
     <item android:id="@+id/menu_exit"
         android:icon="@drawable/exit"
         android:title="@string/exit"
-        android:orderInCategory="700"
+        android:orderInCategory="800"
         app:showAsAction="never"/>
 
 </menu>
