--- a/app/src/main/res/layout/list_item_shops.xml
+++ b/app/src/main/res/layout/list_item_shops.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="@dimen/shop_item_height">
 
     <TextView
         android:id="@+id/nameTextView"
@@ -17,8 +17,8 @@
 
     <ImageView
         android:id="@+id/nearestShopImageView"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="@dimen/shop_item_nearest_shop_size"
+        android:layout_height="@dimen/shop_item_nearest_shop_size"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignWithParentIfMissing="true"
