--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,12 @@
     <dimen name="activity_horizontal_margin">0dp</dimen>
     <dimen name="activity_vertical_margin">0dp</dimen>
     <dimen name="common_margin">8dp</dimen>
-    <dimen name="shop_filter_service_button_size">48dp</dimen>
+    <dimen name="common_drawer_layout_width">300dp</dimen>
+    <dimen name="shop_item_height">50dp</dimen>
+    <dimen name="shop_item_nearest_shop_size">32dp</dimen>
     <dimen name="service_image_size">48dp</dimen>
     <dimen name="shop_photo_size">100dp</dimen>
+    <dimen name="shop_filter_service_button_size">48dp</dimen>
+    <dimen name="app_bar_height">200dp</dimen>
+    <dimen name="history_list_width">200dp</dimen>
 </resources>
