--- a/app/src/main/res/layout-land/fragment_shop_details.xml
+++ b/app/src/main/res/layout-land/fragment_shop_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ru.okmarket.okgoods.fragments.ShopDetailsFragment">
+    tools:context=".fragments.ShopDetailsFragment">
 
     <TextView
         android:id="@+id/nameTextView"
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -43,7 +43,7 @@
             android:id="@+id/phoneTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -51,7 +51,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -61,7 +61,7 @@
             android:id="@+id/workHoursTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -69,7 +69,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -79,7 +79,7 @@
             android:id="@+id/squareTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -87,7 +87,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -97,7 +97,7 @@
             android:id="@+id/openingDateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -105,7 +105,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -115,7 +115,7 @@
             android:id="@+id/parkingPlacesTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -123,7 +123,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -133,7 +133,7 @@
             android:id="@+id/numberOfCashboxesTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -345,7 +345,7 @@
             android:id="@+id/cancelButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="50"
             android:text="@android:string/cancel"
             style="?android:attr/buttonBarButtonStyle" />
 
@@ -353,7 +353,7 @@
             android:id="@+id/okButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="50"
             android:text="@android:string/ok"
             style="?android:attr/buttonBarButtonStyle" />
 
