--- a/app/src/main/res/layout-w900dp/activity_history_content.xml
+++ b/app/src/main/res/layout-w900dp/activity_history_content.xml
@@ -1,28 +1,25 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:baselineAligned="false"
-    android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
-    android:showDividers="middle"
     tools:context=".activities.HistoryActivity">
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/item_list"
-        android:name="ru.okmarket.okgoods.activities.ItemListFragment"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/historyRecyclerView"
         android:layout_width="@dimen/history_list_width"
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".activities.HistoryActivity"
         tools:listitem="@layout/list_item_history" />
 
-    <FrameLayout
-        android:id="@+id/item_detail_container"
+    <fragment
+        android:id="@+id/historyDetailsFragment"
+        android:name="ru.okmarket.okgoods.fragments.HistoryDetailsFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_weight="100"
+        tools:layout="@layout/fragment_history_details" />
 
 </LinearLayout>
