--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ru.okmarket.okgoods.activities.MainActivity">
+    tools:context=".activities.MainActivity">
 
     <ru.okmarket.okgoods.widgets.NoScrollableDrawerLayout
         android:id="@+id/drawerLayout"
