--- a/app/src/main/res/layout/fragment_history_details.xml
+++ b/app/src/main/res/layout/fragment_history_details.xml
@@ -1,8 +1,13 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_detail"
-    style="?android:attr/textAppearanceLarge"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:textIsSelectable="true"
-    tools:context=".activities.HistoryDetailsFragment" />
+    tools:context=".fragments.HistoryDetailsFragment">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/app_name"/>
+
+</RelativeLayout>
