--- a/app/src/main/res/layout/fragment_shop_details.xml
+++ b/app/src/main/res/layout/fragment_shop_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ru.okmarket.okgoods.fragments.ShopDetailsFragment">
+    tools:context=".fragments.ShopDetailsFragment">
 
     <TextView
         android:id="@+id/nameTextView"
@@ -29,7 +29,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -39,7 +39,7 @@
             android:id="@+id/phoneTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -47,7 +47,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -57,7 +57,7 @@
             android:id="@+id/workHoursTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -65,7 +65,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -75,7 +75,7 @@
             android:id="@+id/squareTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -83,7 +83,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -93,7 +93,7 @@
             android:id="@+id/openingDateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -101,7 +101,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -111,7 +111,7 @@
             android:id="@+id/parkingPlacesTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -119,7 +119,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -129,7 +129,7 @@
             android:id="@+id/numberOfCashboxesTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
+            grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_value" />
@@ -149,7 +149,6 @@
             android:id="@+id/servicesTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
             grid:layout_gravity="fill_horizontal|center_vertical"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -159,7 +158,7 @@
             android:id="@+id/servicesHorizontalScrollView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="2"
+            grid:layout_columnWeight="100"
             grid:layout_gravity="fill_horizontal">
 
             <ScrollView
@@ -280,7 +279,6 @@
             android:id="@+id/photosTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            grid:layout_columnWeight="1"
             grid:layout_gravity="fill_horizontal|center_vertical"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -290,7 +288,7 @@
             android:id="@+id/photosHorizontalScrollView"
             android:layout_width="0dp"
             android:layout_height="@dimen/shop_photo_size"
-            grid:layout_columnWeight="2"
+            grid:layout_columnWeight="100"
             grid:layout_gravity="fill_horizontal">
 
             <ScrollView
@@ -325,7 +323,7 @@
             android:id="@+id/cancelButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="50"
             android:text="@android:string/cancel"
             style="?android:attr/buttonBarButtonStyle" />
 
@@ -333,7 +331,7 @@
             android:id="@+id/okButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="50"
             android:text="@android:string/ok"
             style="?android:attr/buttonBarButtonStyle" />
 
